v0.10.0/_sources/gallery/embellishments/legend.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/embellishments/legend.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_embellishments_legend.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_embellishments_legend.py:


Legend
------

The :meth:`pygmt.Figure.legend` method can automatically create a legend for
symbols plotted using :meth:`pygmt.Figure.plot`. Legend entries are only
created when the ``label`` parameter is used. For more complicated legends,
including legends with multiple columns, users have to write an ASCII file
with instructions for the layout of the legend items and pass it
to the ``spec`` parameter of :meth:`pygmt.Figure.legend`. For details on
how to set up such a file, please see the GMT documentation at
https://docs.generic-mapping-tools.org/latest/legend.html#legend-codes.

.. GENERATED FROM PYTHON SOURCE LINES 14-33



.. image-sg:: /gallery/embellishments/images/sphx_glr_legend_001.png
   :alt: legend
   :srcset: /gallery/embellishments/images/sphx_glr_legend_001.png
   :class: sphx-glr-single-img





.. code-block:: default

    import pygmt

    fig = pygmt.Figure()

    fig.basemap(projection="x2c", region=[0, 7, 3, 7], frame=True)

    fig.plot(
        data="@Table_5_11.txt",
        style="c0.40c",
        fill="lightgreen",
        pen="faint",
        label="Apples",
    )
    fig.plot(data="@Table_5_11.txt", pen="1.5p,gray", label="My lines")
    fig.plot(data="@Table_5_11.txt", style="t0.40c", fill="orange", label="Oranges")

    fig.legend(position="JTR+jTR+o0.2c", box=True)

    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.878 seconds)


.. _sphx_glr_download_gallery_embellishments_legend.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: legend.py <legend.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: legend.ipynb <legend.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
